tests/NormalTests/paczka1/fuzzy1/81295343.err
Error in line 3: xbg8LAs8 S210 10,8
Error in line 31: 4wTV57L0jSj A606 38,3
Error in line 35: xbg8LAs8 A852 43,4
Error in line 39: xbg8*As8 S493 148,8
